--- a/index.html
+++ b/index.html
@@ -1,126 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Hand Space Pro</title>
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: #000;
-  }
-  video {
-    display: none;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>Space Research Lab</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background: black;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
 </head>
-
 <body>
-<video id="video" autoplay playsinline></video>
-
-<script type="module">
-import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.158/build/three.module.js";
-import { Hands } from "https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js";
-import { Camera } from "https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js";
-
-/* ------------------ SMOOTHING ------------------ */
-let targetX = 0, targetY = 0, targetZ = 0;
-let smoothX = 0, smoothY = 0, smoothZ = 0;
-
-/* ------------------ THREE JS ------------------ */
-const scene = new THREE.Scene();
-
-const camera3D = new THREE.PerspectiveCamera(
-  75,
-  window.innerWidth / window.innerHeight,
-  0.1,
-  1000
-);
-camera3D.position.z = 5;
-
-const renderer = new THREE.WebGLRenderer({ antialias: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
-
-/* ------------------ OBJECT ------------------ */
-const geometry = new THREE.SphereGeometry(0.4, 64, 64);
-const material = new THREE.MeshStandardMaterial({
-  color: 0x00ffff,
-  emissive: 0x0088ff,
-  metalness: 0.9,
-  roughness: 0.2
-});
-const orb = new THREE.Mesh(geometry, material);
-scene.add(orb);
-
-/* ------------------ LIGHT ------------------ */
-scene.add(new THREE.AmbientLight(0x404040, 2));
-const light = new THREE.PointLight(0x00ffff, 3);
-light.position.set(2, 2, 5);
-scene.add(light);
-
-/* ------------------ HANDS ------------------ */
-const hands = new Hands({
-  locateFile: (file) =>
-    `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`
-});
-
-hands.setOptions({
-  maxNumHands: 1,
-  modelComplexity: 1,
-  minDetectionConfidence: 0.8,
-  minTrackingConfidence: 0.8
-});
-
-hands.onResults((results) => {
-  if (!results.multiHandLandmarks) return;
-
-  const lm = results.multiHandLandmarks[0];
-
-  // INDEX FINGER TIP
-  const finger = lm[8];
-
-  // Convert camera coords → 3D space
-  targetX = (finger.x - 0.5) * 6;
-  targetY = -(finger.y - 0.5) * 6;
-  targetZ = (0.5 - finger.z) * 4;
-});
-
-/* ------------------ CAMERA ------------------ */
-const video = document.getElementById("video");
-const cam = new Camera(video, {
-  onFrame: async () => {
-    await hands.send({ image: video });
-  },
-  width: 640,
-  height: 480
-});
-cam.start();
-
-/* ------------------ ANIMATION ------------------ */
-function animate() {
-  requestAnimationFrame(animate);
-
-  // Smooth follow (PRO FEEL)
-  smoothX += (targetX - smoothX) * 0.15;
-  smoothY += (targetY - smoothY) * 0.15;
-  smoothZ += (targetZ - smoothZ) * 0.15;
-
-  orb.position.set(smoothX, smoothY, smoothZ);
-  orb.rotation.y += 0.01;
-
-  renderer.render(scene, camera3D);
-}
-
-animate();
-
-/* ------------------ RESIZE ------------------ */
-window.addEventListener("resize", () => {
-  camera3D.aspect = window.innerWidth / window.innerHeight;
-  camera3D.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
-</script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
