--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Space Research Lab</title>
+  <meta charset="UTF-8">
+  <title>Quantum Entanglement</title>
   <style>
     body {
       margin: 0;
-      overflow: hidden;
       background: black;
-    }
-    canvas {
-      display: block;
+      overflow: hidden;
     }
   </style>
 </head>
 <body>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
