--- a/index.html
+++ b/index.html
@@ -1,32 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Research Lab</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Research Sandbox</title>
+<style>
+  body { margin:0; overflow:hidden; background:black; font-family:monospace; }
+  #panel {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    background: rgba(0,0,0,0.6);
+    border: 1px solid rgba(255,255,255,0.1);
+    padding: 12px;
+    color: #0ff;
+    font-size: 13px;
+  }
+  #panel label { display:block; cursor:pointer; }
+</style>
 </head>
 <body>
 
-<div id="ui">
-  <h1>RESEARCH LAB</h1>
-
-  <div class="panel">
-    <button onclick="spawnMatter()">Spawn Matter</button>
-    <button onclick="mix()">Mix</button>
-    <button onclick="resetLab()">Reset</button>
-  </div>
-
-  <div class="panel">
-    <label>Energy</label>
-    <input type="range" min="0" max="100" value="50" id="energy">
-    
-    <label>Entropy</label>
-    <input type="range" min="0" max="100" value="30" id="entropy">
-  </div>
+<div id="panel">
+  <label><input type="checkbox" id="particles" checked> Particle Field</label>
+  <label><input type="checkbox" id="blackhole"> Black Hole</label>
+  <label><input type="checkbox" id="nebula"> Nebula</label>
 </div>
 
-<canvas id="lab"></canvas>
+<script type="module">
+import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.158/build/three.module.js";
 
-<script src="lab.js"></script>
+/* CORE */
+const scene = new THREE.Scene();
+scene.fog = new THREE.FogExp2(0x000000, 0.03);
+
+const camera = new THREE.PerspectiveCamera(70, innerWidth/innerHeight, 0.1, 1000);
+camera.position.z = 18;
+
+const renderer = new THREE.WebGLRenderer({ antialias:true });
+renderer.setSize(innerWidth, innerHeight);
+renderer.setPixelRatio(devicePixelRatio);
+document.body.appendChild(renderer.domElement);
+
+/* PARTICLES */
+let particleSystem;
+function createParticles() {
+  const count = 20000;
+  const pos = new Float32Array(count * 3);
+  for (let i = 0; i < count * 3; i++) {
+    pos[i] = (Math.random() - 0.5) * 15;
+  }
+  const geo = new THREE.BufferGeometry();
+  geo.setAttribute("position", new THREE.BufferAttribute(pos, 3));
+  const mat = new THREE.PointsMaterial({
+    size: 0.05,
+    color: 0x66ffff,
+    transparent: true,
+    opacity: 0.8,
+    blending: THREE.AdditiveBlending
+  });
+  particleSystem = new THREE.Points(geo, mat);
+  scene.add(particleSystem);
+}
+createParticles();
+
+/* BLACK HOLE */
+let blackHole;
+function createBlackHole() {
+  const geo = new THREE.SphereGeometry(1.5, 64, 64);
+  const mat = new THREE.MeshBasicMaterial({ color: 0x000000 });
+  blackHole = new THREE.Mesh(geo, mat);
+  scene.add(blackHole);
+}
+
+/* NEBULA */
+let nebula;
+function createNebula() {
+  const geo = new THREE.SphereGeometry(6, 32, 32);
+  const mat = new THREE.MeshBasicMaterial({
+    color: 0x4422ff,
+    transparent: true,
+    opacity: 0.08,
+    wireframe: true
+  });
+  nebula = new THREE.Mesh(geo, mat);
+  scene.add(nebula);
+}
+
+/* UI LOGIC */
+particles.onchange = e => {
+  if (e.target.checked) createParticles();
+  else scene.remove(particleSystem);
+};
+
+blackhole.onchange = e => {
+  if (e.target.checked) createBlackHole();
+  else scene.remove(blackHole);
+};
+
+nebula.onchange = e => {
+  if (e.target.checked) createNebula();
+  else scene.remove(nebula);
+};
+
+/* ANIMATION */
+function animate(t) {
+  requestAnimationFrame(animate);
+
+  if (particleSystem) {
+    particleSystem.rotation.y += 0.0006;
+    particleSystem.rotation.x += 0.0002;
+  }
+
+  if (blackHole) {
+    blackHole.rotation.y += 0.002;
+  }
+
+  if (nebula) {
+    nebula.rotation.y -= 0.0004;
+  }
+
+  renderer.render(scene, camera);
+}
+animate();
+
+/* RESIZE */
+addEventListener("resize", ()=>{
+  camera.aspect = innerWidth/innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(innerWidth, innerHeight);
+});
+</script>
 </body>
 </html>
