--- a/index.html
+++ b/index.html
@@ -2,124 +2,139 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Research Sandbox</title>
+<title>Cosmic Research Lab</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  body { margin:0; overflow:hidden; background:black; font-family:monospace; }
-  #panel {
-    position: fixed;
-    top: 15px;
-    left: 15px;
-    background: rgba(0,0,0,0.6);
-    border: 1px solid rgba(255,255,255,0.1);
-    padding: 12px;
-    color: #0ff;
-    font-size: 13px;
-  }
-  #panel label { display:block; cursor:pointer; }
+html,body {
+  margin:0;
+  padding:0;
+  overflow:hidden;
+  background:black;
+  font-family:Arial;
+}
+#ui {
+  position:fixed;
+  top:20px;
+  left:20px;
+  z-index:10;
+}
+button {
+  background:rgba(0,150,255,0.2);
+  color:white;
+  border:1px solid #0ff;
+  padding:10px 14px;
+  cursor:pointer;
+}
 </style>
 </head>
 <body>
 
-<div id="panel">
-  <label><input type="checkbox" id="particles" checked> Particle Field</label>
-  <label><input type="checkbox" id="blackhole"> Black Hole</label>
-  <label><input type="checkbox" id="nebula"> Nebula</label>
+<div id="ui">
+  <button onclick="spawnAtom()">Spawn Atom</button>
+  <button onclick="spawnMatter()">Spawn Matter</button>
 </div>
 
 <script type="module">
-import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.158/build/three.module.js";
+import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js";
 
-/* CORE */
+/* SCENE */
 const scene = new THREE.Scene();
-scene.fog = new THREE.FogExp2(0x000000, 0.03);
+scene.fog = new THREE.Fog(0x000000, 15, 100);
 
-const camera = new THREE.PerspectiveCamera(70, innerWidth/innerHeight, 0.1, 1000);
-camera.position.z = 18;
+/* CAMERA */
+const camera = new THREE.PerspectiveCamera(65, innerWidth/innerHeight, 0.1, 500);
+camera.position.z = 50;
 
+/* RENDERER */
 const renderer = new THREE.WebGLRenderer({ antialias:true });
 renderer.setSize(innerWidth, innerHeight);
 renderer.setPixelRatio(devicePixelRatio);
 document.body.appendChild(renderer.domElement);
 
-/* PARTICLES */
-let particleSystem;
-function createParticles() {
-  const count = 20000;
-  const pos = new Float32Array(count * 3);
-  for (let i = 0; i < count * 3; i++) {
-    pos[i] = (Math.random() - 0.5) * 15;
+/* LIGHT */
+scene.add(new THREE.AmbientLight(0x4444ff, 0.6));
+const sun = new THREE.PointLight(0x88ccff, 3, 200);
+sun.position.set(0,0,30);
+scene.add(sun);
+
+/* STARS */
+const starGeo = new THREE.BufferGeometry();
+const starCount = 80000;
+const pos = new Float32Array(starCount*3);
+for(let i=0;i<starCount*3;i++){
+  pos[i] = (Math.random()-0.5)*300;
+}
+starGeo.setAttribute("position", new THREE.BufferAttribute(pos,3));
+const stars = new THREE.Points(
+  starGeo,
+  new THREE.PointsMaterial({ color:0xffffff, size:0.06 })
+);
+scene.add(stars);
+
+/* OBJECT LIST */
+const objects = [];
+
+/* ATOM */
+window.spawnAtom = () => {
+  const nucleus = new THREE.Mesh(
+    new THREE.SphereGeometry(1.2,32,32),
+    new THREE.MeshStandardMaterial({ color:0xff3355, emissive:0x330000 })
+  );
+  nucleus.userData.type = "atom";
+  nucleus.userData.electrons = [];
+
+  for(let i=0;i<6;i++){
+    const e = new THREE.Mesh(
+      new THREE.SphereGeometry(0.15,16,16),
+      new THREE.MeshStandardMaterial({ color:0x33ffff, emissive:0x004444 })
+    );
+    e.userData.angle = Math.random()*Math.PI*2;
+    nucleus.userData.electrons.push(e);
+    scene.add(e);
   }
-  const geo = new THREE.BufferGeometry();
-  geo.setAttribute("position", new THREE.BufferAttribute(pos, 3));
-  const mat = new THREE.PointsMaterial({
-    size: 0.05,
-    color: 0x66ffff,
-    transparent: true,
-    opacity: 0.8,
-    blending: THREE.AdditiveBlending
-  });
-  particleSystem = new THREE.Points(geo, mat);
-  scene.add(particleSystem);
-}
-createParticles();
-
-/* BLACK HOLE */
-let blackHole;
-function createBlackHole() {
-  const geo = new THREE.SphereGeometry(1.5, 64, 64);
-  const mat = new THREE.MeshBasicMaterial({ color: 0x000000 });
-  blackHole = new THREE.Mesh(geo, mat);
-  scene.add(blackHole);
-}
-
-/* NEBULA */
-let nebula;
-function createNebula() {
-  const geo = new THREE.SphereGeometry(6, 32, 32);
-  const mat = new THREE.MeshBasicMaterial({
-    color: 0x4422ff,
-    transparent: true,
-    opacity: 0.08,
-    wireframe: true
-  });
-  nebula = new THREE.Mesh(geo, mat);
-  scene.add(nebula);
-}
-
-/* UI LOGIC */
-particles.onchange = e => {
-  if (e.target.checked) createParticles();
-  else scene.remove(particleSystem);
+  scene.add(nucleus);
+  objects.push(nucleus);
 };
 
-blackhole.onchange = e => {
-  if (e.target.checked) createBlackHole();
-  else scene.remove(blackHole);
-};
-
-nebula.onchange = e => {
-  if (e.target.checked) createNebula();
-  else scene.remove(nebula);
+/* MATTER */
+window.spawnMatter = () => {
+  const m = new THREE.Mesh(
+    new THREE.IcosahedronGeometry(5,3),
+    new THREE.MeshStandardMaterial({
+      wireframe:true,
+      color:0x5555ff,
+      transparent:true,
+      opacity:0.25
+    })
+  );
+  scene.add(m);
+  objects.push(m);
 };
 
 /* ANIMATION */
-function animate(t) {
+function animate(t){
   requestAnimationFrame(animate);
 
-  if (particleSystem) {
-    particleSystem.rotation.y += 0.0006;
-    particleSystem.rotation.x += 0.0002;
-  }
+  stars.rotation.y += 0.0002;
 
-  if (blackHole) {
-    blackHole.rotation.y += 0.002;
-  }
+  objects.forEach(o=>{
+    o.rotation.y += 0.002;
+    if(o.userData.type === "atom"){
+      o.userData.electrons.forEach((e,i)=>{
+        e.userData.angle += 0.02;
+        e.position.set(
+          Math.cos(e.userData.angle+i)*4 + o.position.x,
+          Math.sin(e.userData.angle*0.7)*2 + o.position.y,
+          Math.sin(e.userData.angle+i)*4 + o.position.z
+        );
+      });
+    }
+  });
 
-  if (nebula) {
-    nebula.rotation.y -= 0.0004;
-  }
+  camera.position.z = 50 - Math.sin(t*0.0004)*12;
+  camera.lookAt(0,0,0);
 
-  renderer.render(scene, camera);
+  renderer.render(scene,camera);
 }
 animate();
 
